[tool.poetry]
name = "shisha-guid-backend"
version = "0.1.0"
description = ""
authors = ["Mr.John Pork"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"